# RayTracer

./: CMakeLists.txt  README.txt  compile.sh
lib/: pugixml.cpp
res/: example1.xml  example2.xml
src/: Background.cpp  Background.h  Camera.cpp  Camera.h  Color.h  Light.h  Object.cpp  Object.h  RGB.h  RGB_Space.h  Ray.h  Sphere.cpp  Sphere.h  Vec3.h  XMLParser.h  main.cpp  pugixml.hpp
